ICE-9482 modified the LazyScheduleEventList class to take a start date and an end date, rather than only taking year and month values; fixed issues in week view related to not showing events for certain days (first day of the week, last day of the week, weeks that spans two different months); fixed day header repeating the day number for two week days of the day when DST changes come into effect; fixes and refactoring for correctness concerning the accuracy of dates and UTC; made the text bold for the main title and the titles of the events list and the event details
git-svn-id: http://anonsvn.icesoft.org/repo/icefaces4@49589 8668f098-c06c-11db-ba21-f49e70c34f74

--- a/trunk/icefaces/ace/component/resources/icefaces.ace/schedule/schedule.css
+++ b/trunk/icefaces/ace/component/resources/icefaces.ace/schedule/schedule.css
@@ -11,6 +11,7 @@
 .ice-ace-schedule .schedule-title {
 	padding: 14px;
 	text-align: center;
+	font-weight: bold;
 }
 .ice-ace-schedule .schedule-title .schedule-button-previous {
 	float: left;
@@ -166,8 +167,17 @@
 .ice-ace-schedule .schedule-config-sidebar-hidden .schedule-grid {
 	width: 100%;
 }
-.ice-ace-schedule .schedule-details {
+.ice-ace-schedule .schedule-details-title,
+.ice-ace-schedule .schedule-details-content {
 	display: none;
+}
+.ice-ace-schedule .schedule-config-details-sidebar .schedule-details-title,
+.ice-ace-schedule .schedule-config-details-sidebar .schedule-details-content {
+	display: block;
+}
+.ice-ace-schedule .schedule-list-title,
+.ice-ace-schedule .schedule-details-title {
+	font-weight: bold;
 }
 .ice-ace-schedule .schedule-grid td {
 	vertical-align: top;
